# recipe-management

./: .env  .gitignore  Cargo.toml  Dockerfile  build.rs  recipes.db  remove_page_number.py
.github/: pull_request_template.md
manuals/: install.md
migrations/2022-11-19-094737_create_recipes/: down.sql  up.sql
migrations/2022-11-20-073650_add_pages/: down.sql  up.sql
migrations/2022-11-20-150445_add_tags/: down.sql  up.sql
migrations/2022-11-27-061036_conventionalize_foreign_keys/: down.sql  up.sql
migrations/2022-12-09-133450_add_user/: up.sql
migrations/2022-12-11-074734_add_tried/: down.sql  up.sql
migrations/2022-12-18-053239_add_comment/: down.sql  up.sql
migrations/2022-12-18-183044_add_recipe_text/: down.sql  up.sql
migrations/2022-12-24-160756_recipe-unique-constraint/: down.sql  up.sql
sql/: schema.sql  testaccount.sql  testcourses.sql
src/: args.rs  database.rs  lib.rs  main.rs  models.rs  parsetypes.rs  queries.rs  schema.rs  secret.rs  strops.rs  templates.rs  text_search.rs
src/search/: mod.rs  search_toggle.rs  search_utils.rs  stop_words.rs  synonym_tokenizer.rs
templates/: add_book.html  add_recipe.html  base.html  course.html  hello.html  login.html  recipe_detail.html  recipe_edit_form.html  search_form.html
