[package]
name = "recipemanagement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
itertools = "0.10.5"
axum = "0.5"
tokio = { version = "1", features = ["full"] }
askama = "0.11.1"
serde = { version = "1.0.60" }

[[bin]]
name = "import"
path = "src/bin/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
path = "src/lib.rs"