[package]
name = "recipemanagement"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
vergen = "6"
anyhow = "1.0"


[dependencies]
regex = "1"
diesel = { version = "2.1.4", features = ["sqlite"] }
dotenvy = "0.15"
itertools = "0.12.0"
axum = "0.6.1"
tokio = { version = "1", features = ["full"] }
askama = "0.12.1"
serde = { version = "1.0.60" }
argon2 = "0.5.2"
rand_core = { version = "0.6", features = ["std"] }
axum-sessions = "0.6.1"
log = "0.4"
env_logger = "0.10.1"
diesel_logger = "0.3.0"
hex = "0.4.3"
tantivy = "0.25.0"
futures = "0.3.25"


[dependencies.rand]
version = "0.8.5"
features = ["min_const_gen"]

[profile.dev.package.argon2]
opt-level=3


[[bin]]
name = "import"
path = "src/bin/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
path = "src/lib.rs"